modification du css du composant Topbar pour que tous les selecteurs soit "pure" (alors qu'ils étaient tous enbrique dans la classe topbar jpp)

--- a/src/app/components/Topbar/style.module.css
+++ b/src/app/components/Topbar/style.module.css
@@ -6,29 +6,28 @@
   display: flex;
   justify-content: space-between;
   transition: opacity 2s ease-out;
+}
 
-  .subGroup {
-    display: grid;
-    width: 15rem;
-  }
+.subGroup {
+  display: grid;
+  width: 15rem;
+}
 
-  h1 {
-    font-size: 1.2rem;
-  }
+.topBar h1 {
+  font-size: 1.2rem;
+}
 
-  h2 {
-    font-weight: 350;
-    font-size: 1rem;
-    text-align: right;
-  }
+.topBar h2 {
+  font-weight: 350;
+  font-size: 1rem;
+  text-align: right;
+}
 
-  hr {
-    justify-self: center;
-    height: 0px;
-    width: 98%;
-    border: solid .0225rem var(--gray-alpha-200);
-  }
-
+.topBar hr {
+  justify-self: center;
+  height: 0px;
+  width: 98%;
+  border: solid .0225rem var(--gray-alpha-200);
 }
 
 .invisible {
