fini le style et la logique lier au Sidenav pour qu'il soit dynamique avec la page

--- a/src/app/components/Sidenav/style.module.css
+++ b/src/app/components/Sidenav/style.module.css
@@ -13,3 +13,19 @@
     opacity: 0;
     transition: opacity .5s;
 }
+
+.active {
+    font-size: 1.2rem;
+    font-weight: bold;
+    transition: font-size .125s ease-out;
+}
+
+.inactive {
+    font-weight: normal;
+    transition: font-size .125s ease-in;
+}
+
+.sideNav a:hover {
+    font-size: 1.2rem;
+    transition: font-size .125s ease-in-out;
+}
