--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -30,8 +30,13 @@
 .main {
   display: flex;
   flex-direction: column;
-  gap: 40rem;
+  gap: 20rem;
   grid-row-start: 5;
+}
+
+.section {
+  min-height: 20rem;
+  min-width: 40rem;
 }
 
 /* Enable hover only on non-touch devices */
